--- a/.env
+++ b/.env
@@ -1,4 +1,8 @@
 # Spotify API keys
 
-SPOTIFY_ID=your-spotify-id
-SPOTIFY_SECRET=your-spotify-secret
+SPOTIFY_ID=ddc5e4ae267146a5997584835c68cd7a
+SPOTIFY_SECRET=e73fd889710f47fbafda216aad17269b
+
+BANDSINTOWN_ID=codingbootcamp
+
+OMDB_ID=trilogy
