--- a/package.json
+++ b/package.json
@@ -16,5 +16,11 @@
   "bugs": {
     "url": "https://github.com/Mgncoding/liri-node-app/issues"
   },
-  "homepage": "https://github.com/Mgncoding/liri-node-app#readme"
+  "homepage": "https://github.com/Mgncoding/liri-node-app#readme",
+  "dependencies": {
+    "axios": "^0.18.0",
+    "bandsintown": "^1.0.1",
+    "dotenv": "^8.0.0",
+    "node-spotify-api": "^1.1.1"
+  }
 }
